<resources>
    <string name="app_name">HCS</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="health_care_system">Health Care System</string>
    <string name="broj_potrebnih">Broj Potrebnih</string>
    <string name="naziv">Naziv</string>
    <string name="vrijeme_konzumacije">Vrijeme konzumacije</string>
    <string name="number_of_consumption">Number of consumption</string>
    <string name="time_of_consumption">Time of consumption</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="add_new">Add new</string>
</resources>
